tests/tmytests/bad/class_main.lat
class A {}

A main() {
    return (A) null;
}